# valagl

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md  install.cmake  sources.cmake
ValaGL/: App.vala  AppError.vala  Canvas.vala  _namespace.vala
ValaGL.Core/: Camera.vala  CoreError.vala  GLProgram.vala  GeometryUtil.vala  IBO.vala  MatrixMath.vala  Util.vala  VAO.vala  VBO.vala  _namespace.vala
cmake/: FindExtraDeps.cmake  FindGLib.cmake  FindVala.cmake  config.h.in
data/shaders/: fragment.glsl  vertex.glsl
scripts/: seed  updatepo
vapi/: AppConfig.vapi  gl.vapi  glew-minimal.vapi  glew.vapi  glu.vapi
